feat: Add burger menu

--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ishara Musippaththu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/stylesheets/style.css"/>
 </head>
 <body>
     <!-- Navbar -->
     <head>
-        <nav class="navbar">
-            <div class="navbar-container">
-                <div class="logo">
-                    <a href="#" id="logo">Ishara Musippaththu</a>
-                </div>
-                <ul class="links">
-                    <li><a href="hero" id="home">Home</a></li>
-                    <li><a href="projects" id="projects">Projects</a></li>
-                    <li><a href="aboutme" id="aboutme">About Me</a></li>
-                    <li><a href="contact" id="contact">Contact</a></li>
-                </ul>
-                <div class="toggle-btn">
-                    
-                </div>
+        <div class="navbar-container">
+            <div class="logo">
+                <a href="#" id="logo">Ishara Musippaththu</a>
             </div>
-        </nav> 
+            <ul class="links">
+                <li><a href="hero">Home</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><a href="aboutme">About Me</a></li>
+                <li><a href="contact">Contact</a></li>
+            </ul>
+            <div class="toggle-btn"></div>
+            <div class="toggle-btn"></div>
+            <div class="toggle-btn"></div>
+        </div>
     </head>
 </body>
 </html>
