feat: add dropdown menu and js

--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
 </head>
 <body>
     <!-- Navbar -->
-    <head>
+    <header>
         <div class="navbar-container">
             <div class="logo">
                 <a href="#" id="logo">Ishara Musippaththu</a>
             </div>
             <ul class="links">
-                <li><a href="hero">Home</a></li>
+                <li><a href="home">Home</a></li>
                 <li><a href="projects">Projects</a></li>
                 <li><a href="aboutme">About Me</a></li>
                 <li><a href="contact">Contact</a></li>
             </ul>
-            <div class="toggle-btn"></div>
-            <div class="toggle-btn"></div>
-            <div class="toggle-btn"></div>
+            <div class="burger-menu">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </div>
-    </head>
+        <div class="dropdown-menu">
+            <li><a href="home">Home</a></li>
+            <li><a href="projects">Projects</a></li>
+            <li><a href="aboutme">About Me</a></li>
+            <li><a href="contact">Contact</a></li>
+        </div>
+    </header>
+    <script src="public/javascripts/app.js"></script>
 </body>
 </html>
