feat: add about section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,37 @@
                 </div>
             </div>    
         </section>
+        <section id="about">
+            <p class="section__text__p1">Get to Know More</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img
+                    src="./public/images/image.jpg"
+                    alt="Profile picture"
+                    class="about-pic"
+                    />
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-containers">
+                            <img width="50" height="50" 
+                            src="https://img.icons8.com/ios-filled/50/22333B/book-and-pencil.png" 
+                            alt="book-and-pencil"
+                            class="icon"
+                            />
+                            <h3>Education</h3>
+                            <p>Medieninformatik B.Sc.<br />HKA </p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            I'm a media computer science student who is passionate about ux/ui design. My journey as a UX/UI designer as well as a Frontend developer has just begun, yet I'm eager and ambitious to learn new skills that will help me become a UX designer who designs the best solutions for users.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section> 
     <script src="public/javascripts/app.js"></script>
 </body>
 </html>
