feat: add proficiencies and animated skill bars

--- a/index.html
+++ b/index.html
@@ -83,131 +83,141 @@
             </div>
         </div>
     </section>
-    <section id="experience">
-        <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2   h2 class="experience-subtitle">Frontend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>SASS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                            <h3>TypeScript</h3>
-                            <p>Basic</p>
+    <section id="proficiency">
+        <p class="section__text__p1">Learn About My</p>
+        <h1 class="title">Proficiency</h1>
+        <div class="skills-containers">
+            <div class="skills-info">
+                <div class="skills__categories">Frontend</div>
+                <ul class="progress-bars">
+                    <h3>HTML</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" per="90%" style="max-width: 90%;"></div>
                         </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                            <h3>Material UI</h3>
-                            <p>Intermediate</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="experience-subtitle">Frontend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>PostgreSQL</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>Node JS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>Express JS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img
-                                src="./assets/checkmark.png"
-                                alt="Experience icon"
-                                class="icon"
-                            />
-                            <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
+                        <span class="percentage">90%</span>
+                    </li>
+                    <h3>CSS</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" per="80%" style="max-width: 80%;"></div>
+                        </div>
+                        <span class="percentage">80%</span>
+                    </li>
+                    <h3>JavaScript</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" per="60%" style="max-width: 60%;"></div>
+                        </div>
+                        <span class="percentage">60%</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="skills-info">
+                <div class="skills__categories">Backend</div>
+                <ul class="progress-bars">
+                    <h3>Java</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="60%" style="max-width: 60%;"></div>
+                        </div>
+                        <span class="percentage">60%</span>
+                    </li>
+                    <h3>C</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="50%" style="max-width: 50%;"></div>
+                        </div>
+                        <span class="percentage">50%</span>
+                    </li>
+                    <h3>C++</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="40%" style="max-width: 40%;"></div>
+                        </div>
+                        <span class="percentage">40%</span>
+                    </li>
+                    <h3>Python</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="30%" style="max-width: 30%;"></div>
+                        </div>
+                        <span class="percentage">30%</span>
+                    </li>
+                    <h3>SQL</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="60%" style="max-width: 60%;"></div>
+                        </div>
+                        <span class="percentage">60%</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="skills-info">
+                <div class="skills__categories">CAD & Modelling</div>
+                <ul class="progress-bars">
+                    <h3>Rhino 3D</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="75%" style="max-width: 75%;"></div>
+                        </div>
+                        <span class="percentage">75%</span>
+                    </li>
+                    <h3>Maya</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="85%" style="max-width: 85%;"></div>
+                        </div>
+                        <span class="percentage">85%</span>
+                    </li>
+                    <h3>Blender</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="70%" style="max-width: 70%;"></div>
+                        </div>
+                        <span class="percentage">70%</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="skills-info">
+                <div class="skills__categories">Editing & Prototyping</div>
+                <ul class="progress-bars">
+                    <h3>Adobe Photoshop</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="75%" style="max-width: 75%;"></div>
+                        </div>
+                        <span class="percentage">75%</span>
+                    </li>
+                    <h3>Adobe Illustrator</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="90%" style="max-width: 90%;"></div>
+                        </div>
+                        <span class="percentage">90%</span>
+                    </li>
+                    <h3>Affinity Designer</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="75%" style="max-width: 75%;"></div>
+                        </div>
+                        <span class="percentage">75%</span>
+                    </li>
+                    <h3>Affinity Publisher</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="85%" style="max-width: 85%;"></div>
+                        </div>
+                        <span class="percentage">85%</span>
+                    </li>
+                    <h3>Figma</h3>
+                    <li>
+                        <div class="bar">
+                            <div class="progress" perc="95%" style="max-width: 95%;"></div>
+                        </div>
+                        <span class="percentage">95%</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
@@ -226,7 +236,7 @@
                                 class="project-img"
                                 />
                             </div>    
-                            <h2 class="experience-subtitle project-title">Smart-Blinds App</h2>
+                            <h2 class="skills__category project-title">Smart-Blinds App</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
@@ -241,7 +251,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="experience-subtitle project-title">Project Two</h2>
+                            <h2 class="skills__category project-title">Project Two</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
@@ -256,7 +266,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="experience-subtitle project-title">Hotel Website</h2>
+                            <h2 class="skills__category project-title">Hotel Website</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
@@ -271,7 +281,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="experience-subtitle project-title">Project Four</h2>
+                            <h2 class="skills__category project-title">Project Four</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
@@ -286,7 +296,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="experience-subtitle project-title">Project Five</h2>
+                            <h2 class="skills__category project-title">Project Five</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
@@ -301,7 +311,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="experience-subtitle project-title">Project Six</h2>
+                            <h2 class="skills__category project-title">Project Six</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
                                 Open Project
